--- a/student-rajan-application/src/main/resources/application-qa.properties
+++ b/student-rajan-application/src/main/resources/application-qa.properties
@@ -1,9 +1,9 @@
-server.port=4444
-spring.application.name=student-application
+server.port=4447
+spring.application.name=student-application_qa
 
 ##database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/student_rajan
+spring.datasource.url=jdbc:mysql://localhost:3306/student_rajan_qa
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -11,5 +11,3 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.profiles.active=local
